v1.1.0/modules/schema/pages/class/ProtectiveActionRegulation.adoc
= `ProtectiveActionRegulation`
:toclevels: 4


+++Protective action to change regulation to Equipment.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ProtectiveActionRegulation`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ProtectiveAction.adoc[`ProtectiveAction`]
*** *`ProtectiveActionRegulation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<RegulatingControl,`RegulatingControl`>>
//| [[slots_table.RegulatingControl]]<<RegulatingControl,`RegulatingControl`>>
| 1 +
xref::class/RegulatingControl.adoc[`RegulatingControl`]
| _n/a_
| _n/a_

| <<isRegulating,`isRegulating`>>
//| [[slots_table.isRegulating]]<<isRegulating,`isRegulating`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true the regulator is put in-service, otherwise out-of-service (no regulation).+++
| _n/a_

| <<targetValue,`targetValue`>>
//| [[slots_table.targetValue]]<<targetValue,`targetValue`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The target value specified the new case input for the regulator.  The value has the units appropriate to the mode attribute....+++
| _n/a_

| <<GateComCondition,`GateComCondition`>>
//| [[slots_table.GateComCondition]]<<GateComCondition,`GateComCondition`>>
| 0..1 +
xref::class/Gate.adoc[`Gate`]
| _n/a_
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]

| <<GateEnabledCondition,`GateEnabledCondition`>>
//| [[slots_table.GateEnabledCondition]]<<GateEnabledCondition,`GateEnabledCondition`>>
| 0..1 +
xref::class/Gate.adoc[`Gate`]
| +++Association to a Gate that through a gate logic and input pin defines enabling of the ProtectiveAction.+++
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]

| <<ProtectionEquipment,`ProtectionEquipment`>>
//| [[slots_table.ProtectionEquipment]]<<ProtectionEquipment,`ProtectionEquipment`>>
| 0..1 +
xref::class/ProtectionEquipment.adoc[`ProtectionEquipment`]
| _n/a_
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]

| <<ProtectiveActionCollection,`ProtectiveActionCollection`>>
//| [[slots_table.ProtectiveActionCollection]]<<ProtectiveActionCollection,`ProtectiveActionCollection`>>
| 1 +
xref::class/ProtectiveActionCollection.adoc[`ProtectiveActionCollection`]
| _n/a_
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The status of the class set by operation or by signal. Optional field that will override other status fields.+++
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]

| <<normalEnabled,`normalEnabled`>>
//| [[slots_table.normalEnabled]]<<normalEnabled,`normalEnabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The default/normal value used when other active signal/values are missing.+++
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++The status of the class set by operation or by signal. Optional field that will override other status fields.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveAction.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#GateComCondition]
=== `GateComCondition`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveAction.GateComCondition`
| Cardinality
| 0..1
| Type
| xref::class/Gate.adoc[`Gate`]

| Inherited from
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.GateComCondition,&#10548;>>
--
////


//[discrete]
[#GateEnabledCondition]
=== `GateEnabledCondition`
+++Association to a Gate that through a gate logic and input pin defines enabling of the ProtectiveAction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveAction.GateEnabledCondition`
| Cardinality
| 0..1
| Type
| xref::class/Gate.adoc[`Gate`]

| Inherited from
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.GateEnabledCondition,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isRegulating]
=== `isRegulating`
+++If true the regulator is put in-service, otherwise out-of-service (no regulation).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveActionRegulation.isRegulating`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isRegulating,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#normalEnabled]
=== `normalEnabled`
+++The default/normal value used when other active signal/values are missing.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveAction.normalEnabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.normalEnabled,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectionEquipment]
=== `ProtectionEquipment`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveAction.ProtectionEquipment`
| Cardinality
| 0..1
| Type
| xref::class/ProtectionEquipment.adoc[`ProtectionEquipment`]

| Inherited from
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.ProtectionEquipment,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionCollection]
=== `ProtectiveActionCollection`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveAction.ProtectiveActionCollection`
| Cardinality
| 1
| Type
| xref::class/ProtectiveActionCollection.adoc[`ProtectiveActionCollection`]

| Inherited from
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionCollection,&#10548;>>
--
////


//[discrete]
[#RegulatingControl]
=== `RegulatingControl`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveActionRegulation.RegulatingControl`
| Cardinality
| 1
| Type
| xref::class/RegulatingControl.adoc[`RegulatingControl`]


|===

////
[.text-left]
--
<<slots_table.RegulatingControl,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#targetValue]
=== `targetValue`
+++The target value specified the new case input for the regulator.  The value has the units appropriate to the mode attribute. The protective action does not change the mode attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProtectiveActionRegulation.targetValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.targetValue,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/RegulatingControl.adoc[`RegulatingControl`] | xref::class/RegulatingControl.adoc#ProtectiveActionRegulation[`ProtectiveActionRegulation`]


|===

